[#8247] initial ViewApi and ViewContextService implementations

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -171,6 +171,7 @@ components:
         - reject
         - cancel
     ViewResponse:
+      description: Wrapper class for a result object and a ViewContext object.
       type: object
       properties:
         result:
