[#8247] use modelPackage for generating REST API server

--- a/api-srv-rest/build.gradle
+++ b/api-srv-rest/build.gradle
@@ -31,22 +31,9 @@ smartbit4all {
         apiPackagePostfix = "restserver"
         invokerPackagePrefix = "org.smartbit4all.api"
         invokerPackagePostfix = "restserver.util"
+        modelPackagePrefix = "org.smartbit4all.api"
+        modelPackagePostfix = "bean"
 		genApiRestServer = true
-		// add mappings for beans to reuse them from the api-domain project instead of generating them again
-		importMappings = [
-			// navigation beans
-			"NavigationEntry" : "org.smartbit4all.api.navigation.bean.NavigationEntry",
-			"NavigationResponse" : "org.smartbit4all.api.navigation.bean.NavigationResponse",
-			// session beans
-			"AuthenticationProviderData" : "org.smartbit4all.api.session.bean.AuthenticationProviderData",
-			"GetAuthenticationProvidersResponse" : "org.smartbit4all.api.session.bean.GetAuthenticationProvidersResponse",
-			"SessionInfoData" : "org.smartbit4all.api.session.bean.SessionInfoData",
-			"UserInfo" : "org.smartbit4all.api.session.bean.UserInfo",
-			// view
-			"ViewContext" : "org.smartbit4all.api.view.bean.ViewContext",
-			// localauthentication
-			"LocalAuthenticationLoginRequest" : "org.smartbit4all.api.localauthentication.bean.LocalAuthenticationLoginRequest",
-		]
     }
 }
 
