--- a/sec/build.gradle
+++ b/sec/build.gradle
@@ -8,6 +8,8 @@ dependencies {
 
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
+	api 'org.springframework.security:spring-security-oauth2-jose'
+	api 'org.springframework.security:spring-security-oauth2-client'
 	api 'org.springframework.security:spring-security-config'
 	api 'org.springframework.security:spring-security-web'
 	api 'javax.servlet:javax.servlet-api:4.0.1'
