[#8720] JwtSessionRequestFilter notSkippableCalls list

--- a/api-domain/src/main/resources/descriptors/session-api.yaml
+++ b/api-domain/src/main/resources/descriptors/session-api.yaml
@@ -181,7 +181,7 @@ components:
           type: string
     ApiError:
       type: object
-      required: [message]
+      required: [code, message]
       properties:
         code:
           type: string
