--- a/api-domain/src/main/resources/descriptors/sb4starter-api.yaml
+++ b/api-domain/src/main/resources/descriptors/sb4starter-api.yaml
@@ -63,6 +63,7 @@ components:
       enum:
         - ContentAccessDownload
         - WordEdit
+        - WordCompare
         - ExcelEdit
         - ExecuteCommand
         - ContentAccessUpload
