[#8997] sanitize ReferenceDefinitionData data, minor refactoring

--- a/api-domain/src/main/resources/descriptors/object-api.yaml
+++ b/api-domain/src/main/resources/descriptors/object-api.yaml
@@ -24,6 +24,11 @@ components:
         enough to identify an incoming reference.
       required: 
       - "uri"
+      - sourceObjectName
+      - propertyPath
+      - targetObjectName
+      - aggregation
+      - multiplicity
       properties:
         uri:
           type: string
@@ -32,31 +37,13 @@ components:
             The storage identifier of the given definition. It is calculated by the qualified name of the object and the name name of the
             reference. For example object:/com/smartbit4all/mydomain/model/MyObject/firstReference could be a calculated URI for a given reference.
             By deafult it could be a good idea to name the reference by the name of the property that contains the reference value.
-        containment:
-          type: boolean
-          description: |
-            The containment means that the source contains the target object. The target object is accessible only from the source.
         backReference:
           type: string
           format: uri
           description: If an association between two object is navigable into both direction then this uri refers to the opposite reference.
-        source:
-          type: object
-          description: The descriptor of the source object.
-          $ref: '#/components/schemas/ObjectReferenceDefinitionData'
-        targetObjectName:
+        sourceObjectName:
           type: string
           description: The name of the target object.
-    ObjectReferenceDefinitionData:
-      type: object
-      description: |
-        The object reference is one end of the reference let it be source or target. It identifies the object and the propety. This object is 
-        contained by the ReferenceDefinitionData.
-      required: [objectName,propertyPath]
-      properties:
-        objectName:
-          description: The qualified name of the object like com.smartbit4all.domain.MyObject
-          type: string
         propertyPath:
           description:  |
             The descriptor of a property in a domain object. If there is a simple property then we have only the path. The path is a navigation path to
@@ -65,3 +52,20 @@ components:
             access the object directly by its value.
             If we have an array the the array path contains the path of the array property in the same way. The array must contains uri / identifier values.
           type: string
+        targetObjectName:
+          type: string
+          description: The name of the target object.
+        aggregation:
+          $ref: '#/components/schemas/AggregationKind'
+        propertyKind:
+          $ref: '#/components/schemas/ReferencePropertyKind'
+    AggregationKind:
+      type: string
+      description: |
+        COMPOSITE means that the source contains the target object. The target object is accessible 
+        only from the source. NONE means normal reference, no composition. SHARED is not implemented yet.
+      default: none
+      enum: [none, shared, composite]
+    ReferencePropertyKind:
+      type: string
+      enum: [reference, list, map]
