--- a/api-domain/src/main/resources/descriptors/object-api.yaml
+++ b/api-domain/src/main/resources/descriptors/object-api.yaml
@@ -69,3 +69,55 @@ components:
     ReferencePropertyKind:
       type: string
       enum: [reference, list, map]
+    ObjectNodeData:
+      type: object
+      description: |
+        This object contains an object instance as map. It can be used to separate the references and the business data in the API implementations. The object node contains 
+        an object returned by the RetrievalApi. It can manage the state of the object and we can use it to produce ApplyChangeRequest at the end of the modification.
+      required: [qualifiedName, versionNr, state, objectAsMap, referenceValues, referenceListValues, referenceMapValues] 
+      properties:
+        objectUri:
+          type: string
+          format: uri
+          description: |
+            The object URI of the given object state. It is version URI to be able to refere to the given version of the data.
+        qualifiedName:
+          type: string
+          description: |
+            The qualified globaly unique name of the object definition. In a java application it is the qualified name of the class.
+        storageSchema:
+          type: string
+          description: |
+            The logical storage scheme if it is used in the given storage implementation.
+        versionNr:
+          type: integer
+          format: int64
+          default: 0
+          description: |
+            The version number of the given node. It is filled by the retrieve so if we create a new node
+            then it is 0 by default.
+        state:
+          $ref: '#/components/schemas/ObjectNodeState'
+        objectAsMap:
+          type: object
+          additionalProperties: true
+        referenceValues:
+          type: ObjectNodeData
+          additionalProperties:
+            $ref: '#/components/schemas/ObjectNodeData'
+        referenceListValues:
+          type: ObjectNodeData
+          additionalProperties:
+            type: array
+            items:
+              $ref: '#/components/schemas/ObjectNodeData'
+        referenceMapValues:
+          type: object
+          additionalProperties:
+            type: object
+            additionalProperties:
+              $ref: '#/components/schemas/ObjectNodeData'
+    ObjectNodeState:
+      type: string
+      default: NOP
+      enum: [NOP, NEW, MODIFIED, REMOVED]
